examples/test/testpolicy4358.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4358
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key1: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value24
          key28: value43
          key46: value5
      podSelector:
        matchLabels:
          key46: value36
